--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,13 +1,13 @@
 .jogo{
     border: solid #3A5743 4px;
-    height: 80vh;
-    width: 50vw;
     font-family: 'Permanent Marker', cursive;
+    width: 90vw;
+    height: 90vw;
 }
 
 .celula{
     border: solid #3A5743 2px;
-    font-size: 50pt;
+    font-size: 35pt;
     height: 30%;
     padding: 10px;
     text-align: center;
@@ -17,7 +17,8 @@
 .container{
     display: flex;
     justify-content: center;
-    margin: 1em;
+    margin: 5em 0;
+
 }
 
 body{
@@ -32,7 +33,7 @@ header{
 }
 
 h1{
-    font-size: 5em;
+    font-size: 3em;
     margin: 0;
 }
 
@@ -86,4 +87,24 @@ span{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media (min-width: 576px) {
+    h1{
+        font-size: 5em;
+    }
+    body{
+        overflow: hidden;
+    }
+    .jogo{
+        height: 40vw;
+        width: 40vw;
+    }
+    .celula{
+        font-size: 50pt;
+        font-size: 50pt;
+    }
+    .container{
+        margin: 1em 0;
+    }
 }
